--- a/estilo/style.css
+++ b/estilo/style.css
@@ -22,73 +22,95 @@
 }
 
 header {
-    background-color: var(--cor4);
     height: 200px;
     text-align: center;
-    color: white;
-    font-size: 2em;
     font-family: var(--fonte3);
-    min-width: 150px;
+    color: white;
+    background-image: url(../imagens/codigos-html-para-paginas-web.jpeg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
     box-shadow: 0px 7px 9px rgb(0, 0, 0);
+    margin: 0px 0px 25px 0px;
 }
 
 header > h1 {
-    padding-top: 30px;
+    padding-top: 50px;
+    line-height: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.863);
-    font-weight: normal;
+    font-size: 3.5em;
+    font-family: var(--fonte3);
 }
 
 header > p {
-    font-size: 1.5em;
+    font-weight: bolder;
+    padding-top: 20px;
+    font-family: var(--fonte1);
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.863);
+    font-size: 1em;
+    margin: auto;
+    max-width: 500px;
 }
 
 body {
-    background-color: var(--cor5);
+    background-color: var(--cor4);
     font-family: var(--fonte1);
 }
 
 main {
-    font-family: var(--fonte2);
+    max-width: 1000px;
+    min-width: 450px;
+    background-color: rgb(255, 255, 255);
+    margin: auto;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 5px 5px 10px black;
 }
 
-#eu {
-    font-family: var(--fonte2);
-    height: 350px;
+.conteudo {
+    min-height: 300px;
+    max-height: 500px;
+    margin: auto;
     text-align: center;
-    padding: 30px 40px 0px 40px;
+    font-family: var(--fonte2);
 }
 
-#eu > h1 {
-    padding-bottom: 10px;
+.conteudo > h1 {
     font-weight: normal;
-}
-
-#eu > p {
-    padding-bottom: 20px;
-}
-
-#eu > img {
-    background-size: cover;
-    background-position: center center;
-    height: 200px;
-    box-shadow: 0px 7px 9px rgb(0, 0, 0);
-}
-
-#social {
-    position: absolute;
-
-    left: 700px;
-}
-
-#estagio {
-    position: absolute;
-
-    left: 500px;
-}
-
-#projetos {
-    background-color: var(--cor4);
-    height: 300px;
+    font-size: 2.5em;
+    padding-top: 25px;
+    padding-bottom: 30px;
     text-align: center;
+    text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.637);
+}
+
+.conteudo p {
+    font-weight: normal;
+    font-size: 1.2em;
+    text-align: center;
+    line-height: 2em;
+}
+
+#sobre {
+    padding: 20px 20px 20px 20px;
+    text-indent: 30px;
+}
+
+.conteudo a {
+    color: var(--cor3);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover{
+    text-decoration: underline;
+    transition-duration: 0.5s;
+    color: var(--cor2);
+}
+
+footer {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: white;
+    background-color: var(--cor4);
 }
