--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,6 +79,7 @@ main {
 .conteudo > h1 {
     font-weight: normal;
     font-size: 2.5em;
+    margin-top: 10px;
     padding-top: 25px;
     padding-bottom: 30px;
     text-align: center;
